# LeidenMonitor

./: README.md  data_storage.py  email_config.py  email_provider.py  logic.py  main.py  models.py  pyproject.toml  secrets.py
business/: email_provider.py  logic.py
conf/: constants.py  email_config.py  secrets.py
data_layer/: data_storage.py
