[tool.poetry]
name = "LeidenMonitor"
version = "0.1.0"
description = "Monitor the Leiden university website for open positions."
authors = ["rafspiny <rafspiny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
lxml = "^4.9.1"
mailjet-rest = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
